# NexusSim

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_REFERENCE.md  DOCUMENTATION_MAP.md  Dockerfile  LICENSE  README.md  TODO.md  conanfile.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  docs.yml  format-check.yml  release.yml
build_test/: NexusSimConfig.cmake
cmake/: FindPETSc.cmake  NexusSimConfig.cmake.in  TestTargets.cmake
docs/: AI_analysis_spec_comparison.md  Architecture_Decisions.md  Bending_Test_Analysis.md  Coupling_GPU_Specification.md  DOCUMENTATION_ARCHITECTURE.md  Development_Roadmap_Status.md  ELEMENT_LIBRARY_STATUS.md  Element_Integration_Strategies.md  FSI_Field_Registration.md  FSI_Prototype_Plan.md  Framework_Architecture_Current_State.md  GETTING_STARTED_NEXT_PHASE.md  GPU_Activation_Implementation_Plan.md  GPU_SETUP.md  HEX20_DEBUG_SESSION_2025-11-07.md  HEX20_FORCE_SIGN_BUG_ANALYSIS.md  HISTORICAL_NOTES.md  KNOWN_ISSUES.md  Legacy_Migration_Roadmap.md  Migration_Wave_Assignments.md  PROGRESS_VS_GOALS_ANALYSIS.md  PROJECT_CONTEXT.md  QUICK_REFERENCE.md  README.md  README_NEXTGEN.md  SESSION_SUMMARY_2025-10-30.md  SESSION_SUMMARY_2025-11-07.md  TODO.md  Unified_Architecture_Blueprint.md  WHATS_LEFT.md  Wave_Resourcing_Status.md  YAML_Input_Format.md  archived_hex20_mass_analysis.cpp
docs/manual/: Makefile  advanced.md  appendices.md  conf.py  constitutive.md  contact_constraints.md  core_framework.md  elements.md  index.md  material_catalog.md  migration_guide.md  multiphysics.md  phase6.md  solvers.md  user_guide.md  verification.md
examples/: CMakeLists.txt  acoustic_wave37_test.cpp  adaptive_timestep_test.cpp  advanced_contact_test.cpp  advanced_wave16_test.cpp  airbag_wave38_test.cpp  airbag_wave41_test.cpp  ale_wave21_test.cpp  ale_wave27_test.cpp  ams_wave36_test.cpp  arc_length_test.cpp  assembly_wave43_test.cpp  beam2_element_test.cpp  bending_test.cpp  complete_workflow_demo.cpp  composite_layup_test.cpp  composite_progressive_test.cpp  comprehensive_benchmark.cpp  comprehensive_element_validation.cpp  config_driven_test.cpp  constraints_wave43_test.cpp  contact_sphere_plate_test.cpp  contact_test.cpp  contact_wave12_test.cpp  contact_wave21_test.cpp  contact_wave28_test.cpp  contact_wave35_test.cpp  contact_wave43_test.cpp  contact_wave44_test.cpp  coupling_wave37_test.cpp  coupling_wave41_test.cpp  element_erosion_test.cpp  element_library_test.cpp  elements_wave15_test.cpp  elements_wave20_test.cpp  elements_wave26_test.cpp  enhanced_output_test.cpp  eos_wave13_test.cpp  eos_wave43_test.cpp  euler_wave34_test.cpp  (+122 more)
examples/configs/: cantilever.yaml  comprehensive_example.yaml
examples/meshes/: cantilever_beam.mesh
include/nexussim/: nexussim.hpp
include/nexussim/core/: core.hpp  exception.hpp  gpu.hpp  logger.hpp  memory.hpp  mpi.hpp  types.hpp
include/nexussim/coupling/: coupling.hpp  coupling_operator.hpp  coupling_wave37.hpp  coupling_wave41.hpp  field_registry.hpp
include/nexussim/data/: data.hpp  field.hpp  mesh.hpp  state.hpp
include/nexussim/discretization/: beam2.hpp  elements_wave20.hpp  elements_wave26.hpp  hex20.hpp  hex8.hpp  mesh_partition.hpp  shell3.hpp  shell4.hpp  shell_wave43.hpp  specialty_wave38.hpp  spring_damper.hpp  tet10.hpp  tet4.hpp  truss.hpp  wedge6.hpp
include/nexussim/fem/: airbag_wave38.hpp  airbag_wave41.hpp  ale_wave21.hpp  ale_wave27.hpp  constraints.hpp  constraints_wave43.hpp  contact.hpp  contact_wave12.hpp  contact_wave21.hpp  contact_wave28.hpp  contact_wave35.hpp  contact_wave43.hpp  contact_wave44.hpp  controls.hpp  edge_contact.hpp  euler_wave34.hpp  explicit_dynamics.hpp  fem_solver.hpp  friction_model.hpp  hertzian_contact.hpp  initial_conditions.hpp  load_curve.hpp  loads.hpp  loads_wave43.hpp  mortar_contact.hpp  multifluid_wave34.hpp  multiphysics_wave43.hpp  node_to_surface_contact.hpp  rigid_body.hpp  rigid_wall.hpp  sensor.hpp  sensor_wave44.hpp  solver_wave22.hpp  spotweld_wave44.hpp  surface_contact.hpp  tied_contact.hpp  tuning_wave44.hpp  voxel_collision.hpp  xfem_wave36.hpp  xfem_wave41.hpp
include/nexussim/io/: animation_writer.hpp  checkpoint.hpp  config_reader.hpp  cross_section_force.hpp  extended_checkpoint.hpp  interface_force_output.hpp  lsdyna_reader.hpp  mesh_reader.hpp  mesh_validator.hpp  output_wave20.hpp  output_wave40.hpp  output_wave43.hpp  part_energy.hpp  preprocess_wave22.hpp  radioss_reader.hpp  reader_wave22.hpp  result_database.hpp  starter_wave40.hpp  th_wave44.hpp  time_history.hpp  vtk_writer.hpp
include/nexussim/parallel/: contact_exchange_wave45.hpp  force_exchange_wave45.hpp  mpi_wave17.hpp  mpi_wave45.hpp  parallel_io_wave45.hpp  tuning_wave45.hpp
include/nexussim/peridynamics/: pd_adaptive_coupling.hpp  pd_bond_models.hpp  pd_contact.hpp  pd_correspondence.hpp  pd_fem_coupling.hpp  pd_force.hpp  pd_materials.hpp  pd_morphing.hpp  pd_mortar_coupling.hpp  pd_neighbor.hpp  pd_particle.hpp  pd_solver.hpp  pd_state_based.hpp  pd_types.hpp  peridynamics.hpp
include/nexussim/physics/: acoustic_wave37.hpp  adaptive_timestep.hpp  advanced_wave16.hpp  ale_solver.hpp  composite_interlaminar.hpp  composite_layup.hpp  composite_progressive_failure.hpp  composite_thermal.hpp  composite_utils.hpp  element.hpp  element_erosion.hpp  elements_wave15.hpp  eos.hpp  eos_wave13.hpp  eos_wave43.hpp  large_deformation.hpp  material.hpp  material_cowper_symonds.hpp  material_crushable_foam.hpp  material_elastic_plastic_fail.hpp  material_foam.hpp  material_honeycomb.hpp  material_library.hpp  material_models.hpp  material_null.hpp  (+22 more)
src/: CMakeLists.txt  nexussim.cpp
src/discretization/fem/beam/: beam2.cpp
src/discretization/fem/shell/: shell4.cpp
src/discretization/fem/solid/: hex20.cpp  hex20.cpp.backup  hex8.cpp  tet10.cpp  tet4.cpp  wedge6.cpp
src/fem/: contact.cpp  fem_solver.cpp
src/io/: config_reader.cpp  mesh_reader.cpp  radioss_reader.cpp  vtk_writer.cpp
src/physics/: thermal_solver.cpp
(+28 files in other folders)
